清理项目结构

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,9 @@
   "empty": "No data available",
   "buttons": {
     "language": "language"
+  },
+  "menus": {
+    "template_manage": "template manage",
+    "about": "about"
   }
 }
