--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -2,7 +2,9 @@
   "appName": "DD大屏",
   "empty": "暂无数据",
   "buttons": {
-    "language": "语言"
+    "language": "语言",
+    "script_active": "脚本已激活",
+    "script_offline": "脚本已断开"
   },
   "menus": {
     "switch_template": "切换模板",
