--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -2,6 +2,12 @@
   "appName": "DD大屏",
   "empty": "暂无数据",
   "template": "模板",
+  "template_modes": {
+    "standard": "标准",
+    "window": "窗口",
+    "mobile": "移动端",
+    "common": "通用"
+  },
   "buttons": {
     "language": "语言",
     "script_active": "脚本已激活",
