--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -9,6 +9,8 @@
     "common": "通用"
   },
   "buttons": {
+    "login": "登录",
+    "bili_not_login": "尚未登录bilibili",
     "language": "语言",
     "script_active": "脚本已激活",
     "script_offline": "脚本已断开，点击安装脚本"
