--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -24,6 +24,22 @@
     "bilifast": "Vup搜索"
   },
   "actions": {
+    "command": {
+      "ok": "确定",
+      "cancel": "取消",
+      "yes": "是",
+      "no": "否",
+      "abort": "终止",
+      "retry": "重试",
+      "ignore": "忽略"
+    },
+    "crud": {
+      "add": "新增",
+      "edit": "修改",
+      "delete": "删除",
+      "view": "查看",
+      "search": "搜索"
+    },
     "media": {
       "play": "播放",
       "pause": "暂停",
@@ -32,6 +48,15 @@
     }
   },
   "forms": {
+    "common": {
+      "create_time": "创建时间",
+      "update_time": "修改时间"
+    },
+    "meta_module": {
+      "$name": "系统模块",
+      "key": "模块键值",
+      "name": "模块名称"
+    },
     "bili_calendar": {
       "$name": "直播日历",
       "start_time": "时间",
